fixed scaling and overflow

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -15,6 +15,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
