--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -20,6 +20,7 @@
 	letter-spacing: 4px;
 	overflow: hidden;
     display: flex;
+    left: 0;
     justify-content: center;
 	clip: rect(0, auto, auto, 0);
     transition: background-color 1s;
